find_package(GTest REQUIRED)

function(register_test test_name)
    add_executable(${test_name} ${ARGN})
    target_link_libraries(${test_name} PRIVATE Wijagels::lib GTest::GTest GTest::Main)
    add_test(${test_name} ${test_name})
endfunction(register_test)

register_test(list_test list_test.cpp)
register_test(decorator_test decorator_test.cpp)
register_test(point_test point_test.cpp)
register_test(skiplist_test skiplist_test.cpp)
register_test(map_test map_test.cpp)
register_test(vector_test vector_test.cpp)
register_test(algorithm_test algorithm_test.cpp)
